# eth-metadata-starter

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/eth_metadata/: Cargo.toml  eth_metadata.did
src/eth_metadata/abi/: nft_contract.json
src/eth_metadata/src/: eth_rpc.rs  http_types.rs  lib.rs  token_metadata.rs  util.rs
