[package]
name = "eth_metadata"
version = "0.0.0"
description = "Rust utility canister"
authors = ["DFINITY Foundation"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
url = "2.3"
serde_bytes = "0.11.14"
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ethers-core = "2.0"
getrandom = { version = "0.2", features = ["custom"] }
